// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias util getFormatter formats and colors inputs correctly available alias 1`] = `"available → 1.5 (1.5.0)"`;

exports[`alias util getFormatter formats and colors inputs correctly current alias 1`] = `"current → ^1.1 (1.13.0)"`;

exports[`alias util getFormatter formats and colors inputs correctly installed alias 1`] = `"installed → 1.3 (1.3.0)"`;

exports[`alias util getFormatter formats and colors inputs correctly stable alias 1`] = `"stable → 1.13.0"`;

exports[`alias util getFormatter formats and colors inputs correctly system alias 1`] = `"system → N/A"`;

exports[`alias util getFormatter formats and colors inputs correctly unavailable alias 1`] = `"unavailable → 1.1 (N/A)"`;

exports[`alias util getFormatter formats and colors inputs correctly undefined alias 1`] = `"undefined → 1.2.0 (N/A)"`;

exports[`alias util resolveAliases does not crash on cyclic alias dependancy 1`] = `
Array [
  Object {
    "name": "default",
    "value": Object {
      "value": "stable",
      "version": "stable",
    },
  },
  Object {
    "name": "one",
    "value": Object {
      "value": "zero",
      "version": undefined,
    },
  },
  Object {
    "name": "two",
    "value": Object {
      "value": "one",
      "version": undefined,
    },
  },
  Object {
    "name": "zero",
    "value": Object {
      "value": "two",
      "version": undefined,
    },
  },
  Object {
    "name": "latest",
    "value": Object {
      "value": undefined,
      "version": "latest",
    },
  },
  Object {
    "name": "stable",
    "value": Object {
      "value": undefined,
      "version": "stable",
    },
  },
  Object {
    "name": "system",
    "value": Object {
      "value": undefined,
      "version": "system",
    },
  },
]
`;

exports[`alias util resolveAliases matches all aliases on empty pattern 1`] = `
Array [
  Object {
    "name": "default",
    "value": Object {
      "value": "stable",
      "version": "stable",
    },
  },
  Object {
    "name": "one",
    "value": Object {
      "value": "zero",
      "version": "1.8.0",
    },
  },
  Object {
    "name": "zero",
    "value": Object {
      "value": "1.8.0",
      "version": "1.8.0",
    },
  },
  Object {
    "name": "two",
    "value": Object {
      "value": "one",
      "version": "1.8.0",
    },
  },
  Object {
    "name": "latest",
    "value": Object {
      "value": undefined,
      "version": "latest",
    },
  },
  Object {
    "name": "stable",
    "value": Object {
      "value": undefined,
      "version": "stable",
    },
  },
  Object {
    "name": "system",
    "value": Object {
      "value": undefined,
      "version": "system",
    },
  },
]
`;
